# caos

./: .clangd  .gitignore  CMakeLists.txt  default.profraw  valgrind.sh  valgrind.supp
docs/: compile.md
libcaos/: .clang-tidy  CMakeLists.txt  config.h.in  environment.cpp  libcaos.cpp  terminal_options.cpp
libcaos/Middleware/: Middleware.hpp
libcaos/Middleware/Repository/: Exception.hpp  IRepository.hpp
libcaos/Middleware/Repository/Cache/: Cache.hpp
libcaos/Middleware/Repository/Database/: Database.cpp  Database.hpp  DatabaseFwd.cpp  DatabaseFwd.hpp
libcaos/Middleware/Repository/Database/MySQL/: MySQL.cpp  MySQL.hpp
libcaos/Middleware/Repository/Database/PostgreSQL/: PostgreSQL.cpp  PostgreSQL.hpp
libcaos/cmake/: increment_build_counter.cmake  patch_redis_plus_plus_utils.cmake  version.h.in
libcaos/include/: environment.hpp  libcaos.hpp  terminal_options.hpp
sql/GEO/: GEO.sql
sql/GEO/mysql2pg/: mysql2pg.load
sql/GEO/mysql_structure_export/: italy_cap.sql  italy_cities.sql  italy_geo.sql  italy_info.sql  italy_metropolitane.sql  italy_multicap.sql  italy_provincies.sql  italy_regions.sql  italy_sardegna_2017.sql
sql/GEO/mysql_table_export/: italy_cap.sql  italy_info.sql  italy_provincies.sql
sql/GEO/pg_table_insert/: geo.sql  mysql_to_pg_full_pipeline.sh  mysql_to_pg_full_pipeline.sh.old  transform-batch.sh  transform.sh
sql/GEO/pg_table_insert/tmp/mysql_data_export/: italy_cities.sql  italy_geo.sql  italy_metropolitane.sql  italy_multicap.sql  italy_regions.sql  italy_sardegna_2017.sql
sql/GEO/pg_table_insert/tmp/pg_data_import/: italy_cap.pg.sql  italy_cities.pg.sql  italy_geo.pg.sql  italy_info.pg.sql  italy_metropolitane.pg.sql  italy_multicap.pg.sql  italy_provincies.pg.sql  italy_regions.pg.sql  italy_sardegna_2017.pg.sql
src/: caos.cpp  caos.endpoint.cpp  caos.stress.cpp
test/: CMakeLists.txt  test_main.cpp
